--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -21,6 +21,7 @@
       justify-content: space-around;
       align-items: baseline;
       align-content: stretch;
+      background-attachment: fixed
   }
   
   h3 {    
