--- a/src/Components/Categories/Categories.css
+++ b/src/Components/Categories/Categories.css
@@ -12,7 +12,7 @@
     align-items: center;
     align-content: center;
     /* background-color: #f8f2f2; */
-    background-color: blue;
+    /* background-color: blue; */
 }
 
 .page {
@@ -29,7 +29,7 @@
 	align-items: flex-start;
     align-content: center;
     /* background-color: #f8f2f2; */
-    background-color: red;
+    /* background-color: red; */
 }
 
 .hide-page {
@@ -38,7 +38,7 @@
 
     height: 100vh;
     width: 200px;
-    background-color: red;
+    /* background-color: red; */
 }
 
 /* .top {
@@ -66,7 +66,7 @@
     /* height: auto; */
     /* height: 50%; */
     /* overflow: hidden; */
-    background-color: orange;
+    /* background-color: orange; */
     margin: 0%;
     padding: 0%;
 }
